# knowledgeforge-ai

./: .dockerignore  .env.example  .env.providers.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KnowledgeForge.code-workspace  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  runtime.env  runtime.env.example
.github/workflows/: ci.yml
config/: ai-providers.json
docs/: ABOUT.md  AI-AND-WRITER-WORKFLOW.md  ARCHITECTURE.md  CLOUD-SAAS-RUNBOOK.md  DOCKER-DEPLOYMENT.md  LOGGING.md  OPPORTUNITY-AND-STUDIOS.md  PRODUCT-RESEARCH.md  PRODUCTIVITY-WORKFLOW.md  PROVIDERS.md  SECRET-STORAGE.md  SETUP.md  TROUBLESHOOTING.md  USER-MANUAL.md  WORKSPACE-AUTOMATION.md
examples/: README.md
scripts/: Start-KnowledgeForge.ps1  Stop-KnowledgeForge.ps1
src/knowledgeforge/: __init__.py  ai-providers.json  ai.py  cli.py  config.py  library.py  logging_config.py  organizer.py  pipeline.py  secrets.py  web.py
src/knowledgeforge/static/: ai-controls.css  app.js  index.html  styles.css
tests/: test_application.py  test_logging_security.py
