[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgeforge-ai"
version = "0.11.0"
description = "Security-first AI idea orchestration for turning private, unstructured captures into evolving books, businesses, and projects."
readme = "README.md"
license = "MIT"
authors = [{name = "Agyapong Gyamfi"}]
keywords = ["ai-orchestration", "cloud-security", "whisper", "knowledge-management", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai-whisper",
  "openai>=1.109,<3.0",
  "anthropic>=0.75,<1.0",
  "pypdf>=6,<7",
  "python-docx>=1.2,<2",
  "python-multipart>=0.0.18,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "keyring>=25,<27",
  "llama-api-client>=0.6,<1.0",
]

[project.urls]
Homepage = "https://agyaponggyamfi.com/"

[project.scripts]
knowledgeforge = "knowledgeforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
knowledgeforge = ["static/*", "manuals/*", "ai-providers.json"]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Enforce the rules that GitHub's lint runner surfaced so local development
# and CI cannot disagree about import ordering or root-logger usage again.
select = ["E4", "E7", "E9", "F", "I", "LOG"]
